WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305788
[GStreamer][Broadcom] fix incorrect casting of GstGhostPad to GstElement
https://bugs.webkit.org/show_bug.cgi?id=305788
Summary
[GStreamer][Broadcom] fix incorrect casting of GstGhostPad to GstElement
Enrique Ocaña
Reported
2026-01-19 11:51:21 PST
The problem is observed when brcm audio/video filters are plugged into the "inner-parser" in WebKitThunderParser. GStreamerQuirkBroadcomBase::setupBufferingPercentageCorrection() tries and fails to cast GstGhostPad to GstElement. The gst_pad_get_parent_element() method fits better for the use case. Also, it would be nice to disables the correction of buffering percentage for MSE and MediaStream playbacks, since it only makes sense for regular playback. See:
https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1596
Attachments
Add attachment
proposed patch, testcase, etc.
Enrique Ocaña
Comment 1
2026-01-19 11:56:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56849
EWS
Comment 2
2026-01-20 04:46:13 PST
Committed
305877@main
(c4980bb736ef): <
https://commits.webkit.org/305877@main
> Reviewed commits have been landed. Closing PR #56849 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-20 04:47:13 PST
<
rdar://problem/168495547
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug